# statuspage

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  database.rs  main.rs
templates/: index.html  service.html
unminimized_templates/: index.html  service.html
