[package]
name = "statuspage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "time", "macros"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
lazy_static = "1.4"
moka = { version = "0.12", features = ["future"] }
clap = { version = "4.4.18", features = ["derive"] }